// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) No active user 1`] = `
<div
  className="bookmark-btn"
  onClick={[Function]}
>
  <span
    title="Add to bookmarks"
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M17,18L12,15.82L7,18V5H17M17,3H7A2,2 0 0,0 5,5V21L12,18L19,21V5C19,3.89 18.1,3 17,3Z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;

exports[`(2) Not bookmarked 1`] = `
<div
  className="bookmark-btn in-progress"
  onClick={[Function]}
>
  <span
    title="Add to bookmarks"
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M17,18L12,15.82L7,18V5H17M17,3H7A2,2 0 0,0 5,5V21L12,18L19,21V5C19,3.89 18.1,3 17,3Z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;

exports[`(3) Bookmarked 1`] = `
<div
  className="bookmark-btn bookmarked in-progress"
  onClick={[Function]}
>
  <span
    title="Remove from bookmarks"
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M17,3H7A2,2 0 0,0 5,5V21L12,18L19,21V5C19,3.89 18.1,3 17,3Z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;
